Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8750

sourcePixmap() in QGraphicsEffect is buggy when the item is not visible by the view

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.0
    • 4.6.0
    • Widgets: GraphicsView
    • None
    • fcb738161efc965e91c3d528c31ac77d3a05ac64

    Description

      When using sourcePixmap() in a custom effect the pixmap that you get is empty if the item is not seen by the view.(example slide in kinda animation).
      The problem is when we draw the sub tree we pass the exposed rect.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            menard Alexis Menard (closed Nokia identity) (Inactive)
            menard Alexis Menard (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes