Fix QGraphicsEffect cache when the item is not visible by the view.

We can't rely on the exposed rect since the item can be outside the view
so we need to regenerate the complete pixmap.

Task-number:QTBUG-8750
Reviewed-by:sroedal